# spatial-biofilm-sorting-package

./: .editorconfig  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg
spatial_biofilm_sorting_package/: binning.py  extract_foreground.py  plot_utils.py  positional_measures.py  skimage_utils.py  utils.py
tests/test_binning/: test_bin_a_from_b.py  test_bin_array_along_axis.py
tests/test_positional_measures/: test_create_position_maps.py
tests/test_utils/: test_normalize_axis.py
